--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,10 @@
-# Supabase Configuration
-NEXT_PUBLIC_SUPABASE_URL=
-NEXT_PUBLIC_SUPABASE_ANON_KEY=
-SUPABASE_SERVICE_ROLE_KEY=
+# Polar - Sandbox (desarrollo)
+POLAR_ACCESS_TOKEN_SANDBOX=your_polar_sandbox_token_here
 
-# Polar Configuration
-POLAR_ORGANIZATION_ID=
-POLAR_ACCESS_TOKEN_SANDBOX=
-POLAR_ACCESS_TOKEN_PROD=
-POLAR_WEBHOOK_SECRET=
-POLAR_WEBHOOK_URL=
+# Polar - Production (descomenta para producción)
+# POLAR_ACCESS_TOKEN_PROD=your_polar_production_token_here
 
-# Success URL for checkout
-SUCCESS_URL=
-
-# App Configuration
-NEXT_PUBLIC_APP_URL=
+# Resend - Email service (TODAS REQUERIDAS)
+RESEND_API_KEY=re_your_api_key_here
+RESEND_FROM_EMAIL="Your Company <noreply@your-domain.com>"
+RESEND_TO_EMAIL=your_business_email@gmail.com
